<?xml version="1.0" encoding="utf-8"?>

   <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_margin="25dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            card_view:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            android:layout_marginLeft="50dp">

            <TextView
                android:id="@+id/info_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/pref_age"
                android:textSize="15dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="18-"
                android:id="@+id/t1"
                android:paddingLeft="210dp"
                android:layout_margin="10dp"
                android:textStyle="bold"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="70"
                android:id="@+id/t2"
                android:paddingLeft="230dp"
                android:layout_margin="10dp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Years"
                android:paddingLeft="250dp"
                android:layout_margin="10dp"
                android:textStyle="bold"/>

            <com.appyvet.materialrangebar.RangeBar xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/rangebar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mrb_pinColor="#6c3f6a"
                app:mrb_pinMaxFont="15sp"
                app:mrb_pinMinFont="12sp"
                app:mrb_pinRadius="16dp"
                app:mrb_rangeBar="true"
                app:mrb_rangeBarPaddingBottom="20dp"
                app:mrb_selectorBoundarySize="2dp"
                app:mrb_tickEnd="70"
                app:mrb_tickInterval="1"
                app:mrb_tickStart="18" />


        </android.support.v7.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:id="@+id/text1"
            android:layout_margin="15dp"
            android:layout_below="@+id/card_view"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/text1"
            android:id="@+id/realative2">


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view1"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                card_view:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:layout_marginLeft="50dp">

                <TextView
                    android:id="@+id/info_text2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/pref_interest"
                    android:textSize="15dp"
                    android:textStyle="bold" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/realative1">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pref_men"
                        android:layout_margin="35dp"
                        android:id="@+id/men"
                        />
                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/s1"
                        android:layout_margin="25dp"
                        android:layout_centerHorizontal="true"
                        android:paddingLeft="250dp"
                        android:textSize="20dp">
                    </android.support.v7.widget.SwitchCompat>


                </RelativeLayout>

            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intrestedmatter"
            android:id="@+id/text2"
            android:layout_margin="15dp"
            android:layout_below="@+id/realative2"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/relative4"
            android:layout_below="@+id/text2">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view2"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                card_view:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:layout_marginLeft="50dp">

                <TextView
                    android:id="@+id/info_text3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/alert_title"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/realative3">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sounds"
                        android:layout_margin="35dp"
                        android:id="@+id/sound"
                        />
                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/s2"
                        android:layout_margin="25dp"
                        android:layout_centerHorizontal="true"
                        android:paddingLeft="250dp"
                        android:textSize="20dp">
                    </android.support.v7.widget.SwitchCompat>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound_matter"
            android:id="@+id/text3"
            android:layout_margin="15dp"
            android:layout_below="@+id/relative4"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/relative5"
            android:layout_below="@+id/text3">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view3"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                card_view:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:layout_marginLeft="50dp">

                <TextView
                    android:id="@+id/info_text4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/match_maker"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/realative6">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hide_profile"
                        android:layout_margin="35dp"
                        android:id="@+id/matchmaker"
                        />
                    <android.support.v7.widget.SwitchCompat
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/s3"
                        android:layout_margin="25dp"
                        android:layout_centerHorizontal="true"
                        android:paddingLeft="250dp"
                        android:textSize="20dp">
                    </android.support.v7.widget.SwitchCompat>
                </RelativeLayout>
            </android.support.v7.widget.CardView>



        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/match_maker1"
            android:id="@+id/text5"
            android:padding="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_below="@+id/relative5"/>



        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/relative7"
            android:layout_below="@id/text5">


            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view4"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                card_view:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                android:layout_marginLeft="50dp">

                <TextView
                    android:id="@+id/info_text5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/match_maker"
                    android:textSize="15dp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:id="@+id/realative8">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/whitelist_my_app"
                        android:layout_margin="35dp"
                        android:id="@+id/whitemylist"
                        />

                    <Button
                        android:id="@+id/submitotp"
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"

                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="31dp"
                        android:layout_marginRight="31dp"
                        android:background="@drawable/buttonsubmit"
                        android:text="Go"
                        android:textColor="#ffffff" />


                </RelativeLayout>
            </android.support.v7.widget.CardView>


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white1"
            android:layout_below="@id/relative7"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"/>


    </RelativeLayout>

    </ScrollView>




</RelativeLayout>

